--- a/cafe/Properties/Resources.resx
+++ b/cafe/Properties/Resources.resx
@@ -133,4 +133,10 @@
   <data name="Fox21" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Fox2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="StarEmpty" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\StarEmpty.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="StarFilled" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\StarFilled.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
